# py3-ds-toolkit

./: .gitignore  README.md
code_snippets/eda/: onehot_array_or_dict_column.py
code_snippets/pandas/: compressed_pickle.py  df_explode_dictCol_to_columns.py  df_memory_optimize.py
code_snippets/python/: import_from_parent_dir.py
environments/: README.md
environments/basic/: pyproject.toml
environments/indeed/: pyproject.toml
environments/jupyter/: README.md  pyproject.toml
