[project]
name = "indeed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
]

[[tool.uv.index]]
name = "pip-indeed"
url = "https://nexus.corp.indeed.com/repository/pypi/simple"
default = true

[[tool.uv.index]]
name = "pip-common"
url = "https://pypi.python.org/simple"